@@ -1,3 +1,8 @@
+2022-01-20 Gabriele Gorla <gorlik@yahoo.com>
+
+    * sdcc/src/SDCCpeeph.c:
+      Allow peephole rules to match asm lines with comments.
+
 2022-01-18 Gabriele Gorla <gorlik@yahoo.com>
 
     * sdcc/src/mos6502/peep.def:
